--- a/templates/base.post.html.twig
+++ b/templates/base.post.html.twig
@@ -1,34 +1,23 @@
 {% extends 'base.html.twig' %}
 
-{% macro sidebar(blogs) %}
+{% macro sidebar(blogs, id) %}
 <div class="col-4 col-12-medium">
 
     <!-- Sidebar -->
+    {% for b in blogs %}
+        {% if b.getId != id %}
     <section class="box">
-        <a href="#" class="image featured"><img src="{{ asset('images/pic09.jpg') }}" alt="" /></a>
+        <a href="{{ path('selene_cms_blog_post', {slug: b.getSlug}) }}" class="image featured"><img src="{{ b.getImageFile.getImageFile }}" alt="{{ b.getTitle }}" /></a>
         <header>
-            <h3>Sed etiam lorem nulla</h3>
+            <h3>{{ b.getTitle }}</h3>
         </header>
-        <p>Lorem ipsum dolor sit amet sit veroeros sed amet blandit consequat veroeros lorem blandit  adipiscing et feugiat phasellus tempus dolore ipsum lorem dolore.</p>
+        <p>{{ b.getPreview|striptags }}</p>
         <footer>
-            <a href="#" class="button alt">Magna sed taciti</a>
+            <a href="{{ path('selene_cms_blog_post', {slug: b.getSlug}) }}" class="button alt">{% apply readMoreButton_content %}Read More{% endapply %}</a>
         </footer>
     </section>
-    <section class="box">
-        <header>
-            <h3>Feugiat consequat</h3>
-        </header>
-        <p>Veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat sed lorem consequat feugiat lorem dolore.</p>
-        <ul class="divided">
-            <li><a href="#">Sed et blandit consequat sed</a></li>
-            <li><a href="#">Hendrerit tortor vitae sapien dolore</a></li>
-            <li><a href="#">Sapien id suscipit magna sed felis</a></li>
-            <li><a href="#">Aptent taciti sociosqu ad litora</a></li>
-        </ul>
-        <footer>
-            <a href="#" class="button alt">Ipsum consequat</a>
-        </footer>
-    </section>
+        {% endif %}
+    {% endfor %}
 
 </div>
 {% endmacro %}
@@ -56,67 +45,24 @@
             <div class="row">
 
                 {% if not getSetting('rightSidebar') %}
-                    {{ _self.sidebar(blogs) }}
+                    {{ _self.sidebar(blogs, blog.getId) }}
                 {% endif %}
 
                 <div class="col-8 col-12-medium imp-medium">
 
                     <!-- Content -->
                     <article class="box post">
-                        <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+                        <a href="{{ blog.getImageFile.getImageFile }}" class="image featured"><img src="{{ blog.getImageFile.getImageFile }}" alt="" /></a>
                         <header>
-                            <h2>Left Sidebar</h2>
-                            <p>Lorem ipsum dolor sit amet feugiat</p>
+                            <h2>{{ blog.getTitle }}</h2>
+                            <p>Written By: {{ blog.getAuthor }}</p>
                         </header>
-                        <p>
-                        Vestibulum scelerisque ultricies libero id hendrerit. Vivamus malesuada quam faucibus ante dignissim auctor
-                        hendrerit libero placerat. Nulla facilisi. Proin aliquam felis non arcu molestie at accumsan turpis commodo.
-                        Proin elementum, nibh non egestas sodales, augue quam aliquet est, id egestas diam justo adipiscing ante.
-                        Pellentesque tempus nulla non urna eleifend ut ultrices nisi faucibus.
-                        </p>
-                        <p>
-                        Praesent a dolor leo. Duis in felis in tortor lobortis volutpat et pretium tellus. Vestibulum ac ante nisl,
-                        a elementum odio. Duis semper risus et lectus commodo fringilla. Maecenas sagittis convallis justo vel mattis.
-                        placerat, nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-                        eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-                        elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-                        sit amet nullam consequat feugiat dolore tempus.
-                        </p>
-                        <section>
-                            <header>
-                                <h3>Something else</h3>
-                            </header>
-                            <p>
-                            Elementum odio duis semper risus et lectus commodo fringilla. Maecenas sagittis convallis justo vel mattis.
-                            placerat, nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-                            eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-                            elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-                            sit amet nullam consequat feugiat dolore tempus.
-                            </p>
-                            <p>
-                            Nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-                            eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-                            elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-                            sit amet nullam consequat feugiat dolore tempus.
-                            </p>
-                        </section>
-                        <section>
-                            <header>
-                                <h3>So in conclusion ...</h3>
-                            </header>
-                            <p>
-                            Nunc diam iaculis massa, et aliquet nibh leo non nisl vitae porta lobortis, enim neque fringilla nunc,
-                            eget faucibus lacus sem quis nunc suspendisse nec lectus sit amet augue rutrum vulputate ut ut mi. Aenean
-                            elementum, mi sit amet porttitor lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor
-                            sit amet nullam consequat feugiat dolore tempus. Elementum odio duis semper risus et lectus commodo fringilla.
-                            Maecenas sagittis convallis justo vel mattis.
-                            </p>
-                        </section>
+    {{ blog.getContent|raw }}
                     </article>
 
                 </div>
                 {% if getSetting('rightSidebar') %}
-                    {{ _self.sidebar(blogs) }}
+                    {{ _self.sidebar(blogs, blog.getId) }}
                 {% endif %}
             </div>
         </div>
