some blog post cleanup

--- a/templates/blog/post.html.twig
+++ b/templates/blog/post.html.twig
@@ -1,100 +1,88 @@
-{% extends 'base.post.html.twig' %}
+{% extends 'base.html.twig' %}
 
+{% macro sidebar(blogs, id) %}
+<div class="col-4 col-12-medium">
 
-{% block title %}{% apply title_content %}Welcome!{% endapply %} | {{ blog.getTitle }}{% endblock %}
+    <!-- Sidebar -->
+    {% for b in blogs %}
+        {% if b.getId != id %}
+            <section class="box">
+                <a href="{{ path('selene_cms_blog_post', {slug: b.getSlug}) }}" class="image featured"><img src="{{ b.getImageFile.getImageFile }}" alt="{{ b.getTitle }}" /></a>
+                <header>
+                    <h3>{{ b.getTitle }}</h3>
+                </header>
+                <p>{{ b.getPreview|striptags }}</p>
+                <footer>
+                    <a href="{{ path('selene_cms_blog_post', {slug: b.getSlug}) }}" class="button alt">{% apply readMoreButton_content %}Read More{% endapply %}</a>
+                </footer>
+            </section>
+        {% endif %}
 
-{% block metadescription %}
-    <meta name="description" content="{{blog.getPreview|striptags }}">
+        {# This will be the comments section, but I will work on it later.  Just want the framework here first.
+        <section class="box">
+            <header>
+                <h3>Feugiat consequat</h3>
+            </header>
+            <p>Veroeros sed amet blandit consequat veroeros lorem blandit adipiscing et feugiat sed lorem consequat feugiat lorem dolore.</p>
+            <ul class="divided">
+                <li><a href="#">Sed et blandit consequat sed</a></li>
+                <li><a href="#">Hendrerit tortor vitae sapien dolore</a></li>
+                <li><a href="#">Sapien id suscipit magna sed felis</a></li>
+                <li><a href="#">Aptent taciti sociosqu ad litora</a></li>
+            </ul>
+            <footer>
+                <a href="#" class="button alt">Ipsum consequat</a>
+            </footer>
+        </section>
+        #}
+    {% endfor %}
+
+</div>
+{% endmacro %}
+
+{% block bodyClass %}
+    {% apply spaceless %}
+    {% if getSetting('rightSidebar') %}
+        right-sidebar
+    {% else %}
+        left-sidebar
+    {% endif %}
+    {% endapply %}
+{%endblock %}
+
+{% block banner %}
 {% endblock %}
 
-
-{% block heroimage %}
-    <img src="{{ blog.getImageFile.getImageFile }}" class="full-bleed">
+{% block intro %}
 {% endblock %}
 
-{% block container1 %}
-    <h1>{{ blog.getTitle }}</h1>
-    <h2>Written By: {{ blog.getAuthor }}</h2>
-    {{ blog.getContent|raw }}
-{% endblock %}
+{% block main %}
+    <!-- Main -->
+    <section id="main">
+        <div class="container">
+            <div class="row">
 
-{% block comments %}
-    <div id="comments" class="full-bleed">
-        <div class="content">
-            <h3>Comments</h3>
-            {% for comment in blog.getComments %}
-                {% if comment.getPublic %}
-                    <div class="comment">
-                        <span class="comment-email">{{ comment.getAuthor.getEmail }}</span>
-                        <p class="title">{{ comment.getTitle }}</p>
-                        <p>{{ comment.getContent }}</p>
-                    </div>
+                {% if not getSetting('rightSidebar') %}
+                    {{ _self.sidebar(blogs, blog.getId) }}
                 {% endif %}
-            {% endfor %}
 
-            {% if app.user %}
-                <div class="form">
-                    {{ form_start(commentForm) }}
-                    <div class="my-custom-class-for-errors">
-                        {{ form_errors(commentForm) }}
-                    </div>
+                <div class="col-8 col-12-medium imp-medium">
 
-                    <div class="form-control">
+                    <!-- Content -->
+                    <article class="box post">
+                        <a href="{{ blog.getImageFile.getImageFile }}" class="image featured"><img src="{{ blog.getImageFile.getImageFile }}" alt="" /></a>
+                        <header>
+                            <h2>{{ blog.getTitle }}</h2>
+                            <p>Written By: {{ blog.getAuthor }}</p>
+                        </header>
+                        {{ blog.getContent|raw }}
+                    </article>
 
-                        <div>{{ form_label(commentForm.title, 'Comment Title') }}</div>
-                        <div>{{ form_widget(commentForm.title) }}</div>
-                        <small>{{ form_help(commentForm.title) }}</small>
-
-                        <div>{{ form_label(commentForm.content, 'Your Comment') }}</div>
-                        <div>{{ form_widget(commentForm.content) }}</div>
-                        <small>{{ form_help(commentForm.content) }}</small>
-
-                        <div class="form-error">
-                            {{ form_errors(commentForm.content) }}
-                        </div>
-
-                        <div class="form-submit">
-                            {{ form_widget(commentForm.submit) }}
-                        </div>
-
-                    </div>
-                    {{ form_end(commentForm) }}
                 </div>
-
-            {% else %}
-                <span>Account needed to comment</span>
-                <a class="login" href="{{ path('selene_cms_login') }}">Login</a> or <a class="login" href="{{ path('selene_cms_register') }}">Register</a>
-            {% endif %}
-
-                    {% apply sharethisplacement_content %}
-                    <div class="sharethis-inline-share-buttons"></div>
-                    {% endapply %}
-
+                {% if getSetting('rightSidebar') %}
+                    {{ _self.sidebar(blogs, blog.getId) }}
+                {% endif %}
+            </div>
         </div>
-    </div>
-{% endblock %}
-
-
-{% block buckets %}
-    <section class="buckets grid full-bleed">
-        <ul>
-            {% for b in blogs|slice(0, 3) %}
-                <li>
-                    <a href="{{ path('selene_cms_blog_post', {slug: b.getSlug}) }}">
-                        <img src="{{ b.getImageFile.getImageFile }}"
-                             alt="{{ b.getImageFile.getName }}" />
-                        <div class="bucket">
-                            <h3 class="bucket-title">
-                                {{ b.getTitle }}
-                            </h3>
-                            <p>
-                            {{ b.getPreview }}
-                            </p>
-                        </div>
-                        <!-- .bucket -->
-                </li>
-                    </a>
-            {% endfor %}
-        </ul>
     </section>
 {% endblock %}
